Changelog
=========

1.38-dev - (unreleased)
-----------------------

1.37 - (2011-02-10)
-------------------
 * Bug fix: made IndicatorFactSheets use the same IArchetype2Surf adapter as Specifications [tiberich #3982]

1.36 - (2011-02-04)
-------------------
 * Change: Minor changes to the overviews links in portlet refs #4045 [demarant]

1.35 - (2011-02-02)
-------------------
 * Bug fix: adjusted the link to ims overview and made the portlet only available for authorised only (CMS) fixes #4045 [demarant]

1.34 - (2011-02-01)
-------------------
 * Feature: Included most of the metadata and info from the specification into the full view on assessment [demarant]
 * Feature: Show data source organisation before each dataset title in assessment view, fixes #4091 and refs #3452 [demarant]
 * Bug fix: fix rendering of provider urls in external data spec view [tiberich #4092]
 * Bug fix: redirect to @@edit_aggregated instead of edit_aggregated after title edit in indicator [tiberich]
 * Feature: link to @@ims_timeline and @@ims_overview from the readiness portlet [tiberich #4045]
 * Bug fix: show ims content with missing setcodes in @@ims_timeline [tiberich #4053]
 * Feature: added permalinks in indicator factsheet, specification and assessment index views [tiberich #3552]
 * Feature: added aggregated edit view for indicator fact sheets [tiberich #4068]
 * Feature: enabled portlet readiness for indicator fact sheets [tiberich #4068]

1.33 - (2011-01-14)
-------------------
 * Change: Make the readiness message for wrong version on Assessment more clear [tiberich]
 * Bug fix: Fix rendering of ExternalDataSource url [tiberich #4010]
 * Bug fix: make tests pass [tiberich]
 * Change: refactor versioning code for specifications to be used outside of views [tiberich]
 * Change: refactor version reassigning code [tiberich]
 * Bug fix: rename @@object_delete to @@obj_delete as it conflicts with a formcontroller script [tiberich #4028]

1.32 - (2011-01-05)
-------------------